--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
         <nav>
             <ul class="nav-links">
-                <li><a href="sign-in.html">Sign In</a></li>
-                <li><a href="sign-up.html">Sign Up</a></li>
+                <li><a href="login_and_signin_forums.html#login-box">Sign In</a></li>
+                <li><a href="login_and_signin_forums.html#register-box">Sign Up</a></li>
             </ul>
         </nav>
     </header>
+    
 
 <!-- Hero Section -->
 <section class="hero text-center p-10 bg-gradient-to-r from-green-400 to-green-600 text-white rounded-lg shadow-lg">
